[package]
name = "rust-cpu-emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
num-derive = "0.2"
iset = "0.1.1"
clap = { version = "3.2.22", features = ["derive"] }
lazy_static = "1.4.0"
